--- a/cust-services/pom.xml
+++ b/cust-services/pom.xml
@@ -26,6 +26,24 @@
 					<target>${java-version}</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<!-- configuration>
+					<parallel>methods</parallel>
+					<threadCount>10</threadCount> 
+				</configuration>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m</argLine>
+					<systemPropertyVariables>
+						<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>
+					</systemPropertyVariables>
+					<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
+				</configuration -->
+			</plugin>
 		</plugins>
 	</build>
 
